# manager_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
cogs/: CmdManager.py  ZzalUpload.py
plugins/: google.py
src/: bot.py
src/cogs/: CmdManager.py  ZzalUpload.py
src/plugins/: filestation.py  google.py  sheet.py
src/services/: uploadService.py
